--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ kiwisolver==1.4.5
 lxml==5.2.2
 matplotlib==3.9.0
 networkx==3.3
-numpy==2.0.0
+numpy==1.24.3
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
@@ -19,7 +19,7 @@ pydotplus==2.0.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-scipy==1.14.0
+scipy==1.13.1
 setuptools==70.1.1
 six==1.16.0
 sortedcontainers==2.4.0
@@ -28,3 +28,11 @@ tzdata==2024.1
 wheel==0.43.0
 seaborn==0.13.2
 hdbscan==0.8.39
+gensim==4.3.3
+scikit-learn==1.5.1
+tensorflow==2.13.0
+torch==2.5.1
+torchmetrics==1.6.0
+lightning==2.4.0
+psutil==6.0.0
+#ollama==0.4.8
