--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ hdbscan==0.8.39
 gensim==4.3.3
 scikit-learn==1.5.1
 tensorflow==2.13.0
-torch==2.5.1
+#torch==2.3.1+cu121
 torchmetrics==1.6.0
 lightning==2.4.0
 psutil==6.0.0
